# cubemind

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  TASKS.md  checkcam.py  docker-compose.yml  llama-config.cmake  main.py  main_v3.py  pyproject.toml  refine_expert.py
.claude/: ecc-tools.json  elephant-coder.local.md  identity.json
.claude/commands/: add-or-extend-vsa-vm-opcodes-with-tdd.md  feature-development.md  refactoring.md
.claude/plan/: architecture-map.md  repo-cleanup-oop-refactor.md
.codex/: AGENTS.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  gpu_vs_cpu.py  iraven.py  iravenx.py  iravenx_image.py  iravenx_world_manager.py  msmarco.py
cubemind/: __init__.py  __main__.py  container.py  core.py  expert.py  legal_clean.txt  mind.py  model.py  model1.py  model2.py  model3.py  test_legal.txt
cubemind/_archive/: __init__.py  expert.py  mind.py  model2.py  model_v2.py
cubemind/brain/: addition_linear.py  cortex.py  gif_neuron.py  identity.py  llm_injector.py  llm_interface.py  neurochemistry.py  neurogenesis.py  snn_ffn.py  spike_vsa_bridge.py  synapsis.py
cubemind/cloud/: api.py
cubemind/core/: __init__.py  base.py  kernels.py  registry.py  routing.py  types.py
cubemind/execution/: __init__.py  attribute_extractor.py  cvl.py  data_normalizer.py  decision_oracle.py  decoder.py  hyla.py  mindforge.py  moqe.py  oracle_trainer.py  world_encoder.py  world_manager.py
cubemind/experimental/: __init__.py  affective_graph.py  bandits.py  burn_feed.py  convergence.py  hyperattention.py  theory_of_mind.py
cubemind/functional/: __init__.py  activations.py  decorators.py  kernels.py  learning.py  math.py  registry.py  routing.py  similarity.py  telemetry.py
cubemind/memory/: cache.py  formation.py  hippocampal.py  interpolator.py
cubemind/ops/: __init__.py  block_codes.py  hdc.py  vsa_bridge.py
cubemind/perception/: additive_ce.py  attr_cnn.py  audio.py  bio_vision.py  categorizer.py  cnn_encoder.py  color.py  encoder.py  grilly_densenet.py  grilly_resnet.py  harrier_encoder.py  image_vsa.py  json_vsa.py  live_vision.py  perceiver.py  pixel_vsa.py  raven_renderer.py  resnet_vsa.py  scene.py  semantic_encoder.py  siglip_vulkan.py  snn.py  train_cnn.py  train_vq.py  vision_encoder.py  vsa_dense.py
cubemind/reasoning/: combiner.py  grammar.md  hd_got.py  hmm_rule.py  rule_detectors.py  sinkhorn.py  vm.md  vm.py  vqa.py  vs_graph.py
cubemind/routing/: intent_classifier.py  moe_gate.py  router.py
cubemind/safety/: __init__.py  debiasing.py  dp_privacy.py
docs/: cnn_paper.md  generative.md  llm_to_moqe.md  moqe.md  perceiver_pipeline.md  sdr.md  vsa_emb_extras.md
notebooks/: colab_preprocess_teachers.py  colab_vulkan_check.py  fig_many_worlds.py  medium_figures.py  moqe_teacher_extraction.ipynb  neurips_experiments.ipynb  neurips_figures.py  vsa_lm_colab.ipynb  vsa_lm_v3c_grilly.py
sandbox/: README.md  grl_scientific_process.md
scripts/: api_server.py  augment_test_events.py  cognitive_demo.py  decode_distillkit.py  eval.py  eval_moqe_checkpoint.py  eval_moqe_torch.py  h200_extract_logits.py  ingest_to_qdrant.py  live_brain.py  runpod_h200_bootstrap.sh  srt_teacher.py  teaching_demo.py  train.py  train_causal_oracle.py  train_e2.py  train_moqe.ps1  train_moqe.sh  train_world_manager.py
tests/: test_active_inference_mind.py  test_addition_linear.py  test_bio_vision.py  test_block_codes.py  test_cache.py  test_categorizer.py  test_cloud_api.py  test_color_perception.py  test_combiner.py  test_core.py  test_cvl.py  test_decision_oracle.py  test_decoder.py  test_deep_validation.py  test_demo_integration.py  test_eggroll.py  test_encoder.py  test_experiential_encoder.py  test_experimental.py  test_gif_neuron.py  test_harrier_encoder.py.old  test_hdc.py  test_hippocampal.py  test_hippocampal_formation.py  test_hmm.py  test_hyla.py  test_hyperattention.py  test_hypothesis_active_inference.py  test_hypothesis_affective_graph.py  test_hypothesis_hd_got.py  test_identity.py  test_image_vsa.py  test_json_vsa.py  test_liquid_moe_concept.py  test_llm_injector.py  test_llm_interface_unit.py  test_losses.py  test_mindforge.py  test_mindforge_vm.py  test_mirror_mechanism.py  (+27 more)
(+224 files in other folders)
