[project]
name = "cubemind"
version = "2.0.0"
description = "Neuro-vector-symbolic architecture for compositional reasoning on consumer hardware"
license = {text = "BSL-1.1"}
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "grilly>=0.5.3",
    "huggingface-hub>=1.7.1",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cubemind*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Exclude onnx: transitive dep from grilly not used by cubemind.
# onnx <= 1.20.1 has CVE-2026-28500 (supply-chain attack via onnx.hub.load silent=True)
# and no patched version exists yet. Safe to exclude since cubemind never imports onnx.
exclude-dependencies = ["onnx"]

[tool.uv.sources]
grilly = { path = "../grilly", editable = true }

[tool.ruff]
line-length = 100
