[project]
name = "cubemind"
version = "2.0.0"
description = "Neuro-vector-symbolic architecture for compositional reasoning on consumer hardware"
license = {text = "BSL-1.1"}
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "grilly>=0.6.1",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "pillow",
    "pyarrow",
    "torch",
    "torchvision",
    "llama-cpp-python",
    "pytest>=9.0.2",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "safetensors>=0.7.0",
    "grilly>=1.0.0"
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cubemind*", "benchmarks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# Exclude onnx: transitive dep from grilly not used by cubemind.
# onnx <= 1.20.1 has CVE-2026-28500 (supply-chain attack via onnx.hub.load silent=True)
# and no patched version exists yet. Safe to exclude since cubemind never imports onnx.
exclude-dependencies = ["onnx"]

# [tool.uv.sources]
# grilly = { path = "../grilly", editable = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]  # l is our block-length convention (k blocks × l length)
